1999-06-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.h, fvwm/fvwm.c, fvwm/placement.c:
	restored all removed code with _XA_WM_DESKTOP,
	restored SaveDesktopState(),
	implemented yet better logic for Restart command (Done),
	no options added on a native Restart (-s, -restore) anymore,
	completely removed -restore fvwm command argument.

1999-06-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* utils/BuildXLockMenu.in: fixed bug: item titles were filled with
	spaces to up to 9 bytes, screwed up titles with right justified text

1999-06-15  Dan Espen  <dane@mk.bellcore.com>

	* NEWS:
	* fvwm/fvwm2.1 (BUILT IN KEY AND MOUSE BINDINGS): Describe the Help,
	F1 and Meta-Tab builtin bindings.

1999-06-13  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/fvwmlib.h:
	* libs/Bindings.c (GrabAllWindowKeysAndButtons): small fix for strokes
	support.
	Simplified STROKES patch (less #ifdefs)

1999-06-14  Dominik Vogt  <domivotdomivogt@bvstp038.bbn.hp.com>

	* fvwm/menus.c (pop_menu_up):
	(pop_menu_down): don't ungrab the pointer during dynamic actions

1999-06-14  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/misc.c (GetMoveArguments): handle MoveToPage without arguments
	as described in the man page (patch by Chetan Patil)

1999-06-12  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (paint_item):
	(draw_underline):
	(paint_item):
	(scanForHotkeys):
	(AddToMenu):
	(GetMenuStyleIndex): cleaned up strange hotkey code, renamed the
	MenuItem members so you can guess from their name what they do,
	fixed automatic hotkeys to play nicely with numbers as hotkeys,
	rewrote draw_underline to do something comprehensible, removed
	member 'chhotkey' from MenuItem struct (was used only once),
	AutomaticHotkeys can be switched on/off even after the menus have
	been defined.
	(menuShortcuts): fixed character handling with is... macros.
	(pop_menu_up): fixed bug that caused v/HGradient menus to always
	hilight the first item when invoked with a key stroke.
